--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.294.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-phone-number-input": "^3.4.12",
+    "react-select": "^5.10.2",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
