--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "d3-geo": "^3.1.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.294.0",
     "next": "^14.0.4",
@@ -27,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-phone-number-input": "^3.4.12",
     "react-select": "^5.10.2",
+    "react-simple-maps": "^3.0.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
