--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.294.0",
     "next": "^14.0.4",
+    "pdf-lib": "^1.17.1",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-phone-number-input": "^3.4.12",
     "react-select": "^5.10.2",
-    "react-simple-maps": "^3.0.0",
+    "react-simple-maps": "^1.0.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
