--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-pdf": "^10.2.0",
     "react-phone-number-input": "^3.4.12",
     "react-select": "^5.10.2",
-    "react-simple-maps": "^1.0.0",
+    "react-simple-maps": "^3.0.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
