--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.0",
+    "topojson-client": "^3.1.0",
+    "topojson-server": "^3.0.1",
     "tsx": "^4.20.6",
     "typescript": "^5.3.3"
   },
